fix breakpoint spacing issue

--- a/assets/styles/_content.scss
+++ b/assets/styles/_content.scss
@@ -66,7 +66,7 @@ main {
     twitter-widget {
       margin: var(--element-space) auto 0 auto;
       max-width: $max-container-width;
-      @media only screen and (max-width: $breakpoint-phone) {
+      @media only screen and (max-width: $breakpoint-phone + 130) {
         &:not(img) {
           padding: 0 var(--element-space);
         }
